<resources>
    <string name="app_name">DiceHead</string>
    <string name="descMain">Создавайте своих персонажей и играйте в любом месте в любое время.</string>
    <string name="diceHead">DiceHead</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="create">Создать аккаунт</string>
    <string name="regist">Уже зарегистрированы?</string>
    <string name="signIn">Войдите в аккаунт</string>
    <string name="logInButton">Войдите в аккаунт</string>
    <string name="registNo">Продолжить без регистрации</string>
    <string name="logInText">Мы скучали по вам</string>
    <string name="registration">Еще не зарегистрированы?</string>
    <string name="goRegist">Создайте аккаунт.</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="logIn">Рады видеть вас с нами</string>
    <string name="logIn_name">Логин</string>
    <string name="logIn_gmail">Почта</string>
    <string name="logIn_password">Пароль</string>
    <string name="logIn_nickname">Никнейм</string>
    <string name="createPerson">Создать персонажа</string>
    <string name="generatePerson">Сгенерировать персонажа</string>
    <string name="generateDice">Генератор бросков</string>
    <string name="createProfile">Создать профиль</string>
    <string name="trait">Черты и особенности</string>
    <string name="characterNameTraits">Имя персонажа</string> <!--надо будеь заменить на имя каждого-->
    <string name="traits">Черты</string>
    <string name="enterTraits">Введите черты</string>
    <string name="ideal">Идеал</string>
    <string name="enterIdeal">Введите идеал</string>
    <string name="affection">Привязанности</string>
    <string name="enterAffection">Введите привязанности</string>
    <string name="limitation">Недостатки</string>
    <string name="enterLimitation">Введите недостатки</string>
    <string name="addInfo">Дополнительно о персонаже</string>
    <string name="enterAddInfo">Введите дополнительную информацию</string>
    <string name="saveText">Сохранить изменения</string>

    <string name="character">Персонаж</string>
    <string name="experience">Опыт</string>
    <string name="characterName">Имя персонажа</string>
    <string name="characterDescription">Описание персонажа</string>
    <string name="characterClass">Класс</string>
    <string name="textHP">ХП</string>
    <string name="textAC">КД</string>
    <string name="textHitDice">Кость Хитов</string>
    <string name="textHitDiceResult">Итого:</string>
    <string name="textDeathWin">Успехи</string>
    <string name="textDeathLose">Провалы</string>

    <string name="playersHandbook">Книга игрока</string>

    <string name="myCharacters">Мои персонажи</string>

    <string name="strength">СИЛ</string>
    <string name="dexterity">ЛОВ</string>
    <string name="constitution">ТЕЛ</string>
    <string name="intelligence">ИНТ</string>
    <string name="wisdom">МДР</string>
    <string name="charisma">ХАР</string>
    <string name="pasWis">Пассивная мудрость:</string>

    <string name="acrobatics">Акробатика</string>
    <string name="analise">Анализ</string>
    <string name="athletics">Атлетика</string>
    <string name="perception">Восприятие</string>
    <string name="survival">Выживание</string>
    <string name="performance">Выступление</string>
    <string name="intimidation">Запугивание</string>
    <string name="history">История</string>
    <string name="sleight">Ловкость рук</string>
    <string name="magic">Магия</string>
    <string name="medicine">Медицина</string>
    <string name="deception">Обман</string>
    <string name="nature">Природа</string>
    <string name="insight">Интуиция</string>
    <string name="religion">Религия</string>
    <string name="secrecy">Скрытность</string>
    <string name="conviction">Убеждение</string>
    <string name="animal">Животные</string>

    <string name="saveButton">Сохранить изменения</string>
    <string name="saveButtonNo">Авторизируйтесь</string>
    <string name="genDice">Генерация бросков</string>
    <string name="rollDice">Бросить</string>
    <string name="clearDice">Очистить</string>
    <string name="textResult">Здесь будет результат вашего броска</string>
    <string name="textDiceResult">Вы бросили: </string>
    <string name="textNumberDice">Количество дайсов: </string>
    <string name="textValueDice">Значение: </string>
    <string name="textModDice">Модификатор: </string>


    <string name="addWeapon">Добавить оружие</string>
    <string name="addWeaponNFC">Добавить с NFC</string>



</resources>