<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutTraitsMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.TraitsActivity">

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="357dp"
        android:layout_height="52dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/basicPurple"
        android:fontFamily="@font/helvetica_bold"
        android:text="@string/saveText"
        android:textColor="@color/background"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageBackArrow"
        android:layout_width="8dp"
        android:layout_height="14dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backarrow" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutTraitsStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageStar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="28dp"
            android:alpha="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="204dp"
            android:layout_marginTop="90dp"
            android:alpha="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="70dp"
            android:alpha="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="210dp"
            android:layout_marginTop="128dp"
            android:alpha="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_marginTop="30dp"
            android:alpha="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="310dp"
            android:layout_marginTop="346dp"
            android:alpha="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="206dp"
            android:alpha="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="228dp"
            android:layout_marginTop="46dp"
            android:alpha="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="144dp"
            android:layout_marginTop="184dp"
            android:alpha="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textTrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/helvetica_bold"
        android:text="@string/trait"
        android:textColor="@color/basicPurple"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="119dp"
        android:fontFamily="@font/helvetica_bold"
        android:text="@string/characterNameTraits"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutTraits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textTraits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/traits"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutEditTraits"
                android:layout_width="352dp"
                android:layout_height="52dp"
                android:background="@drawable/design_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTraits">

                <EditText
                    android:id="@+id/editTextTraits"
                    android:layout_width="344dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/helvetica_bold"
                    android:text="@string/enterTraits"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutIdeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textIdeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/ideal"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutEditIdeal"
                android:layout_width="352dp"
                android:layout_height="52dp"
                android:background="@drawable/design_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textIdeal">

                <EditText
                    android:id="@+id/editTextIdeal"
                    android:layout_width="344dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/helvetica_bold"
                    android:text="@string/enterIdeal"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutAffection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textAffection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/affection"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutEditAffection"
                android:layout_width="352dp"
                android:layout_height="52dp"
                android:background="@drawable/design_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAffection">

                <EditText
                    android:id="@+id/editTextAffection"
                    android:layout_width="344dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/helvetica_bold"
                    android:text="@string/enterAffection"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutLimitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textLimitation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/limitation"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutEditLimitation"
                android:layout_width="352dp"
                android:layout_height="52dp"
                android:background="@drawable/design_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLimitation">

                <EditText
                    android:id="@+id/editTextLimitation"
                    android:layout_width="344dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/helvetica_bold"
                    android:text="@string/enterLimitation"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutAddInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textAddInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/helvetica_bold"
                android:text="@string/addInfo"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutEditAddInfo"
                android:layout_width="352dp"
                android:layout_height="104dp"
                android:background="@drawable/design_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAddInfo">

                <EditText
                    android:id="@+id/editTextAddInfo"
                    android:layout_width="344dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/helvetica_bold"
                    android:text="@string/enterAddInfo"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>