<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutStarsSignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="-118dp" >

        <ImageView
            android:id="@+id/imageStar6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="52dp"
            android:alpha="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="114dp"
            android:alpha="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="136dp"
            android:alpha="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="68dp"
            android:alpha="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="278dp"
            android:layout_marginTop="188dp"
            android:alpha="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />

        <ImageView
            android:id="@+id/imageStar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="136dp"
            android:layout_marginTop="196dp"
            android:alpha="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/star" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="240dp"
        android:layout_height="33dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="284dp"
        android:fontFamily="@font/helvetica_bold"
        android:text="@string/logInText"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="353dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="492dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/basicPurple"
        android:text="@string/logInButton"
        android:textColor="@color/black"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registration"
        android:layout_width="188dp"
        android:layout_height="17dp"
        android:layout_marginTop="666dp"
        android:alpha="0.75"
        android:fontFamily="@font/helvetica_regular"
        android:text="@string/registration"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCreateAccount"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_bold"
        android:gravity="center"
        android:text="@string/goRegist"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration" />

    <ImageView
        android:id="@+id/imageLight"
        android:layout_width="338dp"
        android:layout_height="485dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="-120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/light_signin" />

    <EditText
        android:id="@+id/login"
        android:layout_width="353dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="356dp"
        android:alpha="0.5"
        android:backgroundTint="@color/basicPurple"
        android:ems="10"
        android:fontFamily="@font/helvetica_regular"
        android:inputType="textPersonName"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="353dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:alpha="0.5"
        android:backgroundTint="@color/basicPurple"
        android:ems="10"
        android:fontFamily="@font/helvetica_regular"
        android:inputType="textPersonName"
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />


</androidx.constraintlayout.widget.ConstraintLayout>



